# PoachedBugsVR

./: .gitignore  .gitmodules  .releaserc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  PoachedBugsVR.code-workspace  README.md  vcpkg.json
.github/workflows/: semantic_release.yml  todo.yml
ExampleConfigs/Defaults/: PoachedBugsVR.ini
ExampleConfigs/SimonrimChoice/: PoachedBugsVR.ini
cmake/: Version.h.in
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
cmake/ports/unordered-dense/: portfile.cmake  vcpkg.json
src/: Addresses.h  PCH.h  Serialization.cpp  Serialization.h  dataHandler.cpp  dataHandler.h  main.cpp  patches.cpp  patches.h
src/Patches/: AccumulateMagnitudeScaling.cpp  AccumulateMagnitudeScaling.h  DrawnBowDetection.cpp  DrawnBowDetection.h  ImproveAllEnchantmentEffects.cpp  MagicEffectPotencyFlags.cpp  MagicEffectPotencyFlags.h  Patch.cpp  Patch.h  PerkEntryMultipleSpellsApplication.cpp  PerkEntryMultipleSpellsApplication.h  PerkEntrySpellCasterCorrection.cpp  PerkEntrySpellCasterCorrection.h  PoisonResistance.cpp  PoisonResistance.h  PowerAttackStaminaRequirement.cpp  PowerAttackStaminaRequirement.h  QuickShotPerkFix.cpp  QuickShotPerkFix.h  ReflectDamage.cpp  ReflectDamage.h  ReflectDamagePatch.cpp  ReflectDamagePatch.h  ResetHarvestFlags.cpp  ScrollExp.cpp  ScrollExpPatch.cpp  ScrollExpPatch.h  StaffExp.cpp  StaffExp.h
src/Patches/Scrambled/: AccumulateMagnitudeScaling.cpp  AccumulateMagnitudeScaling.h  ActorValuePercentage.cpp  ActorValuePercentage.h  ArmorWeightModPerkEntry.cpp  ArmorWeightModPerkEntry.h  DifficultyMultipliers.cpp  DifficultyMultipliers.h  EnchantmentCost.cpp  EnchantmentCost.h  ImproveAllEnchantmentEffects.cpp  ImproveAllEnchantmentEffects.h  LevelledCharacter.cpp  LevelledCharacter.h  MultiplePickpocketAttempts.cpp  MultiplePickpocketAttempts.h  PerkEntryMultipleSpellsApplication.cpp  PerkEntryMultipleSpellsApplication.h  PerkEntrySpellCasterCorrection.cpp  PerkEntrySpellCasterCorrection.h  PoisonResistance.cpp  PoisonResistance.h  PowerAttackStaminaRequirement.cpp  PowerAttackStaminaRequirement.h  ReflectDamage.cpp  ReflectDamage.h  ResetHarvestFlags.cpp  ResetHarvestFlags.h  ScrollExp.cpp  ScrollExp.h  StaffExp.cpp  StaffExp.h  TrainingMenu.cpp  TrainingMenu.h  VendorRespawnFix.cpp  VendorRespawnFix.h  WeaponCharge.cpp  WeaponCharge.h
src/Utilities/: Assembly.h  ExtraRE.cpp  ExtraRE.h
